--- a/index.html
+++ b/index.html
@@ -23,5 +23,40 @@
         <source src="video/video.mp4" type="video/mp4">
        </video> <br>
     <audio src="audio/relaxing-mountains-rivers-streams-running-water-18178 (1).mp3" type="audio/mp3" controls></audio>
+    <!-- added the unordered list -->
+    <h1>my family</h1>
+    <ul><li>sankar</li><li>sowndharya</li><li>haswanth</li></ul><br>
+    <h1>my skills</h1>
+    <ol><li>reading</li><li>cooking</li><li>made soap variety</li><li>craft work</li></ol>
+    <h1>my education detail</h1>
+    <dl><dt>SSLC</dt><dd>government girls higher secondary school <br>mark 404</dd><dt>collegr</dt><dd>cheran college of engineering <br>cgpa 7.0</dd></dl>
+    <!-- unordered list using with square bullet -->
+    <h1>my youbue channel</h1>
+    <ul style="list-style-type:square;"><li>haswanth kutty</li></ul>
+    <!-- added the nested list inside list -->
+    <h1>my favorite food</h1>
+    <ul>
+        <li>briyani
+            <ul>
+                <li>chicken briyani</li>
+            </ul>
+        </li>
+        <li>soup
+            <ul>
+                <li>chicken soup</li>
+                <li>carot soup</li>
+            </ul>
+        </li>
+    </ul>
+        
+    <!-- added the list with letter form -->
+    <h1>my favorite color</h1>
+    <ol type="A"><li>pink</li><li>blue</li><li>black</li></ol>
+    <!-- added the list start counting with specified number -->
+    <h1>my favourie snacks</h1>
+    <ol start="50"><li>fresh juice</li><li>ice cream</li><li>cake</li></ol>
+    
+
+
 </body>
 </html>
